Fix z-index for navbar

--- a/assets/_sass/main.scss
+++ b/assets/_sass/main.scss
@@ -49,6 +49,7 @@ nav#site {
     position: sticky;
     position: -webkit-sticky;
     top: 0;
+    z-index: 100;
 
     background: $background;
 
